# scribe

./: README.md  pyproject.toml
scribe/cli/: commands.py
scribe/notebook/: _notebook_server_utils.py  notebook_mcp_server.py  notebook_server.py  notebook_sever_handlers.py
